--- a/Basic/code/MyAudio/MyAudio/Info.plist
+++ b/Basic/code/MyAudio/MyAudio/Info.plist
@@ -6,6 +6,8 @@
 	<string>需要使用麦克风</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSCameraUsageDescription</key>
+	<string>需要使用相机</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIconFile</key>
